# Renderer

./: .gitignore  CMakeLists.txt  README.md  devlog.md  main.cpp
include/: BasicLight.h  DirectionalLight.h  LightManager.h  Mesh.h  Model.h  PointLight.h  Shader.h  Spotlight.h  Texture.h  Vertex.h  VertexArray.h  View.h  Window.h
objects/Cube/: Cube.mtl
objects/Donut/: Donut.mtl
objects/Floor/: Floor.mtl
shaders/: depthShader.vert  fragmentShader.frag  vertexShader.vert
src/: BasicLight.cpp  DirectionalLight.cpp  LightManager.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Shader.cpp  Spotlight.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  View.cpp  Window.cpp  main.cpp
